# Tibia_MCP

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  package.json
.github/workflows/: deploy.yml
data/: items.json
docs/: AUDIT-2026-06-14.md  beta-deployment-checklist.md  deploy.md  fansite-inquiry.md  launch-checklist.md  listener-smoke-test.md  payments-evaluation.md
docs/superpowers/plans/: 2026-04-08-tibia-data-mcp.md  2026-04-09-tibia-protocol-library.md  2026-04-17-tibia-trade-listener.md  2026-05-30-tibiaedge-discord-bot.md  2026-07-14-tibiaedge-phase0-hygiene.md  2026-07-14-tibiaedge-phase1-core-assistant.md  2026-07-15-tibiaedge-phase2-identity-context.md  2026-07-16-tibiaedge-phase3-memory-distillation.md  2026-07-16-tibiaedge-phase4-quest-companion.md  2026-07-20-openrouter-migration.md  2026-07-21-tibiaedge-phase5-corpus-monetization.md
docs/superpowers/specs/: 2026-04-08-tibia-data-mcp-design.md  2026-04-09-tibia-protocol-library-design.md  2026-04-17-tibia-trade-listener-design.md  2026-05-30-tibiaedge-discord-bot-design.md  2026-07-14-tibiaedge-ai-assistant-design.md  2026-07-15-tibiaedge-second-brain-design.md
lib/protocol/: CMakeLists.txt
lib/protocol/include/tibia/: battleye.h  client.h  types.h  xtea.h
lib/protocol/src/: battleye.cpp  client.cpp  game_login.cpp  game_login.h  http_login.cpp  http_login.h
lib/protocol/src/crypto/: rsa.cpp  rsa.h  xtea.cpp
lib/protocol/src/game/: opcodes.h  packets.cpp  packets.h  parsers.cpp  parsers.h
lib/protocol/src/network/: connection.cpp  connection.h  message.cpp  message.h
lib/protocol/tests/: test_battleye.cpp  test_client.cpp  test_connection.cpp  test_game_login.cpp  test_http_login.cpp  test_login_live.cpp  test_message.cpp  test_packets.cpp  test_parsers.cpp  test_rsa.cpp  test_xtea.cpp
lib/protocol/tests/fixtures/: login_response.json
scripts/vps/: deploy.sh
services/discord-bot/: .env.example  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.check.json  tsconfig.json
services/discord-bot/db/migrations/: 001_initial_schema.sql  002_phase1.sql  003_second_brain_core.sql  004_quest_companion.sql  005_wiki_catalog.sql  006_entitlements.sql
services/discord-bot/eval/: distill.ts  golden.json  prefixTokens.ts  run.ts  toolFixtures.json  userFixtures.json
services/discord-bot/src/: index.ts  main.ts
services/discord-bot/src/__tests__/: smoke.test.ts
services/discord-bot/src/agent/: agentLoop.test.ts  agentLoop.ts  localTools.test.ts  localTools.ts  pricing.test.ts  pricing.ts  systemPrompt.test.ts  systemPrompt.ts
services/discord-bot/src/ai/: client.test.ts  client.ts  cost.test.ts  cost.ts
services/discord-bot/src/commands/: askCommand.test.ts  askCommand.ts  auctionCommand.test.ts  auctionCommand.ts  boostedCommand.test.ts  boostedCommand.ts  charCommand.test.ts  charCommand.ts  goalsCommand.test.ts  goalsCommand.ts  linkCommand.test.ts  linkCommand.ts  memoryCommand.test.ts  memoryCommand.ts  offersCommand.test.ts  offersCommand.ts  priceCommand.test.ts  priceCommand.ts  profileCommand.test.ts  profileCommand.ts  questCommand.test.ts  questCommand.ts  registerCommands.test.ts  registerCommands.ts  registry.test.ts  registry.ts  settingsCommand.test.ts  settingsCommand.ts  types.test.ts  types.ts  upgradeCommand.test.ts  upgradeCommand.ts  usageCommand.test.ts  usageCommand.ts
services/discord-bot/src/config/: env.test.ts  env.ts
services/discord-bot/src/db/: client.test.ts  client.ts  migrationRunner.test.ts  migrationRunner.ts  schemaFiles.test.ts  schemaFiles.ts
services/discord-bot/src/discord/: createClient.test.ts  createClient.ts  interactionDispatcher.test.ts  (+1 more)
src/: log.h  main.cpp
src/cache/: cache.cpp  cache.h
src/http/: client.cpp  client.h
src/listener/: anti_idle.cpp  anti_idle.h  channel_joiner.cpp  channel_joiner.h  main.cpp  message_sink.cpp  message_sink.h
src/llm/: claude_client.cpp  claude_client.h
src/mcp/: server.cpp  server.h  tool.h  transport.cpp  transport.h
src/mcp/tools/: clear_cache.cpp  clear_cache.h  get_price_history.cpp  get_price_history.h  list_active_traders.cpp  list_active_traders.h  list_online_players.cpp  list_online_players.h  list_worlds.cpp  list_worlds.h  lookup_bazaar_auction.cpp  lookup_bazaar_auction.h  lookup_character.cpp  lookup_character.h  lookup_guild.cpp  lookup_guild.h  query_trade_offers.cpp  query_trade_offers.h  refresh_bazaar_history.cpp  refresh_bazaar_history.h  search_bazaar.cpp  search_bazaar.h  search_creature.cpp  search_creature.h  search_item.cpp  search_item.h  search_quest.cpp  search_quest.h  search_spell.cpp  search_spell.h  search_wiki.cpp  search_wiki.h  valuate_auction.cpp  valuate_auction.h
src/parser/: item_registry.cpp  item_registry.h  llm_parser.cpp  llm_parser.h  main.cpp  regex_parser.cpp  regex_parser.h
src/sources/: bazaar.cpp  bazaar.h  tibiadata.cpp  tibiadata.h  tibiawiki.cpp  tibiawiki.h
src/store/: bazaar_store.cpp  bazaar_store.h  trade_store.cpp  trade_store.h
tests/: test_anti_idle.cpp  test_bazaar.cpp  test_bazaar_store.cpp  test_cache.cpp  test_channel_joiner.cpp  test_claude_client.cpp  test_get_price_history.cpp  test_http_client.cpp  test_integration.sh  test_item_registry.cpp  test_list_active_traders.cpp  test_llm_parser.cpp  test_lookup_bazaar_auction.cpp  test_message_sink.cpp  test_query_trade_offers.cpp  test_refresh_bazaar_history.cpp  test_regex_parser.cpp  test_server.cpp  test_tibiadata.cpp  test_tibiawiki.cpp  test_trade_store.cpp  test_transport.cpp  test_valuate_auction.cpp
tests/fixtures/bazaar/: auction_detail.html  auction_detail_full.html  past_auctions.html  search_results.html
tests/fixtures/tibiadata/: character_bubble.json  guild_red_rose.json  world_antica.json  worlds.json
tests/fixtures/tibiawiki/: api_creature_demon.json  api_item_magic_plate_armor.json  api_missing_page.json  api_quest_annihilator.json  api_search_magic_plate.json  api_spell_exura_vita.json  creature_demon.html  item_magic_plate_armor.html  quest_annihilator.html  spell_exura_vita.html
(+104 files in other folders)
